test/fixtures/errors/events_unhandled_error_common_trace.snapshot
node:events:*
      throw er; * Unhandled 'error' event
      ^

Error: foo:bar
    at bar (*fixtures*errors*events_unhandled_error_common_trace.js:*:*)
    at foo (*fixtures*errors*events_unhandled_error_common_trace.js:*:*)
Emitted 'error' event at:
    at quux (*fixtures*errors*events_unhandled_error_common_trace.js:*:*)
    at Object.<anonymous> (*fixtures*errors*events_unhandled_error_common_trace.js:*:*)

Node.js *
